--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
     gap: 10px;
     font-size: 16px;
     justify-content: center;
-
     background: url('./komuz-photo.jpg') no-repeat center/cover;
     min-height: 100dvh;
     font-family: "Roboto Serif", serif;
@@ -18,9 +17,7 @@ body {
     font-weight: 400;
     font-style: normal;
     position:relative;
-    font-variation-settings:
-            "wdth" 100,
-            "GRAD" 0;
+    font-variation-settings: "wdth" 100, "GRAD" 0;
 }
 body:before{
     content:'';
@@ -30,12 +27,12 @@ body:before{
     bottom: 0;
     left: 0;
     background-color: rgba(0,0,0,.73);
-
 }
 .title {
     color: aliceblue;
     position: relative;
     text-align: center;
+    padding-bottom: 5px;
 }
 .container {
     max-width: 1000px;
@@ -91,9 +88,7 @@ body:before{
     aspect-ratio: 1;
     border-radius: 50%;
     background: darkorange;
-    --_m:
-            conic-gradient(#0000 10%,#000),
-            linear-gradient(#000 0 0) content-box;
+    --_m: conic-gradient(#0000 10%,#000), linear-gradient(#000 0 0) content-box;
     -webkit-mask: var(--_m);
     mask: var(--_m);
     -webkit-mask-composite: source-out;
@@ -101,7 +96,6 @@ body:before{
     animation: l3 1s infinite linear;
 }
 @keyframes l3 {to{transform: translate(-50%, -50%) rotate(1turn)}}
-
 .choose-wrapper{
     display: flex;
     flex-wrap: wrap;
@@ -117,16 +111,13 @@ body:before{
    border-color: darkorange;
     color: darkorange;
 }
-
 .choose-title{
     font-weight: 600;
     padding: 0 5px;
-
 }
 .choose-input:checked+.choose-item{
     background-color: darkorange;
 }
-
 .choose-item{
     font-weight: 300;
     font-size: 12px;
@@ -161,7 +152,6 @@ body:before{
     align-items: center;
     justify-content: center;
 }
-
 .fret{
     height: 20px;
     width: 40px;
@@ -188,7 +178,6 @@ body:before{
             aliceblue 2.3px
     );
 }
-
 .fret.active:after{
     content: '';
     position:absolute;
@@ -211,14 +200,14 @@ body:before{
 }
 
 .visually-hidden {
-    position: absolute; /* Убираем из потока документа */
-    width: 1px; /* Минимальный размер */
+    position: absolute;
+    width: 1px;
     height: 1px;
     margin: 0;
     padding: 0;
-    overflow: hidden; /* Скрываем содержимое */
-    clip: rect(0, 0, 0, 0); /* Обрезаем элемент */
-    clip-path: inset(50%); /* Современная альтернатива clip */
-    white-space: nowrap; /* Убираем переносы текста */
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    clip-path: inset(50%);
+    white-space: nowrap;
     border: 0;
 }
