--- a/style.css
+++ b/style.css
@@ -213,6 +213,10 @@ body:before{
     text-align: center;
     font-size: 10px;
     opacity: 0.8;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 2px;
 }
 
 .visually-hidden {
