--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body:before{
     font-size: 20px;
 }
 .wrapper{
-    overflow: auto;
+    overflow-y: scroll;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -79,11 +79,6 @@ body:before{
 }
 .options-form{
    margin-top: 10px;
-}
-.options-form.disabled{
-    pointer-events: none;
-    opacity: 0.8;
-    position:relative;
 }
 .options-form.disabled:after{
     content: '';
